Remoçao obrigatoriedade campo image
