# src/swagger.json
@@ -142,11 +142,14 @@
       }
     },
 
-    "/users?user=&address=": {
+    "/users": {
       "get": {
         "tags": ["Users"],
         "summary": "Busca todos os usuários da plataforma",
         "description": "Essa rota permite buscar todos os usuários da plataforma.",
+        "security": [
+          { "bearerAuth": [] }
+        ],
         "parameters": [
           {
             "name": "user",
@@ -252,6 +255,9 @@
         "tags": ["Users"],
         "summary": "Busca um usuário através do ID",
         "description": "Essa rota permite buscar apenas um usuário por vez. O ID deve estar contido no parâmetro da URL.",
+        "security": [
+          { "bearerAuth": [] }
+        ],
         "parameters": [
           {
             "name": "id",
@@ -532,6 +538,531 @@
           },
           "401": {
             "description": "Incorrect email/password combination"
+          }
+        }
+      }
+    },
+
+    "/ads/import": {
+      "post": {
+        "tags": ["Ads"],
+        "summary": "Importar anúncios",
+        "description": "Essa rota permite a importação de um arquivo CSV contendo as informações dos anúncios",
+        "security": [
+          { "bearerAuth": [] }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file-users": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Your file has been imported"
+          },
+          "401": {
+            "description": "JWT token is missing / Invalid JWT token"
+          },
+          "404": {
+            "description": "User not found"
+          }
+        }
+      }
+    },
+
+    "/ads": {
+      "get": {
+        "tags": ["Ads"],
+        "summary": "Busca todos os anúncios da plataforma",
+        "description": "Essa rota permite buscar todos os anúncios da plataforma.",
+        "parameters": [
+          {
+            "name": "ads",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelo nome, e-mail e telefone do usuário."
+            }
+          },
+          {
+            "name": "address",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pela cidade e estado do usuário."
+            }
+          },
+          {
+            "name": "car",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar por qualquer informação do carro."
+            }
+          },
+          {
+            "name": "airbag",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelos carros que possuem airbag."
+            }
+          },
+          {
+            "name": "alarm",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelos carros que possuem alarme."
+            }
+          },
+          {
+            "name": "air_conditioning",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelos carros que possuem ar condicionado."
+            }
+          },
+          {
+            "name": "eletric_lock",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelos carros que possuem trava elétrica."
+            }
+          },
+          {
+            "name": "eletric_window",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelos carros que possuem vidro elétrico."
+            }
+          },
+          {
+            "name": "stereo",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelos carros que possuem som."
+            }
+          },
+          {
+            "name": "reverse_sensor",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelos carros que possuem sensor de ré."
+            }
+          },
+          {
+            "name": "reverse_camera",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelos carros que possuem câmera de ré."
+            }
+          },
+          {
+            "name": "armoured",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelos carros que são blindados."
+            }
+          },
+          {
+            "name": "hydraulic_steering",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que permite filtrar pelos carros que possuem direção hidráulica."
+            }
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que determina o index pelo qual se deve iniciar a consulta."
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "description": "Parâmetro que limita a quantidade de resultados por página."
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "total": {
+                        "type": "number"
+                      },
+                      "previous": {
+                        "type": "boolean"
+                      },
+                      "next": {
+                        "type": "boolean"
+                      },
+                      "results": [
+                        {
+                          "id": {
+                            "type": "uuid"
+                          },
+                          "price": {
+                            "type": "string"
+                          },
+                          "created_at": {
+                            "type": "number"
+                          },
+                          "car": {
+                            "type": "object",
+                            "properties": {
+                              "id": {
+                                "type": "uuid"
+                              },
+                              "manufacturer": {
+                                "type": "string"
+                              },
+                              "brand": {
+                                "type": "string"
+                              },
+                              "model": {
+                                "type": "string"
+                              },
+                              "year_manufacture": {
+                                "type": "string"
+                              },
+                              "year_model": {
+                                "type": "string"
+                              },
+                              "fuel": {
+                                "type": "string"
+                              },
+                              "gearbox_type": {
+                                "type": "string"
+                              },
+                              "km": {
+                                "type": "string"
+                              },
+                              "color": {
+                                "type": "string"
+                              },
+                              "carImages": [
+                                {
+                                  "id": {
+                                    "type": "uuid"
+                                  },
+                                  "image": {
+                                    "type": "string"
+                                  },
+                                  "car_id": {
+                                    "type": "uuid"
+                                  },
+                                  "image_url": {
+                                    "type": "string"
+                                  }
+                                }
+                              ]
+                            }
+                          }
+                        }
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "JWT token is missing / Invalid JWT token"
+          }
+        }
+      }
+    },
+
+    "/ads/{id}": {
+      "get": {
+        "tags": ["Ads"],
+        "summary": "Busca um anúncio através do ID",
+        "description": "Essa rota permite buscar apenas um anúncio por vez. O ID deve estar contido no parâmetro da URL.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID do usuário que deseja buscar",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "total": {
+                        "type": "number"
+                      },
+                      "previous": {
+                        "type": "boolean"
+                      },
+                      "next": {
+                        "type": "boolean"
+                      },
+                      "results": [
+                        {
+                          "id": {
+                            "type": "uuid"
+                          },
+                          "description": {
+                            "type": "string"
+                          },
+                          "price": {
+                            "type": "string"
+                          },
+                          "views": {
+                            "type": "number"
+                          },
+                          "interests": {
+                            "type": "number"
+                          },
+                          "created_at": {
+                            "type": "number"
+                          },
+                          "user": {
+                            "type": "object",
+                            "properties": {
+                              "id": {
+                                "type": "uuid"
+                              },
+                              "name": {
+                                "type": "string"
+                              },
+                              "phone": {
+                                "type": "string"
+                              },
+                              "address": {
+                                "type": "object",
+                                "properties": {
+                                  "id": {
+                                    "type": "uuid"
+                                  },
+                                  "city": {
+                                    "type": "string"
+                                  },
+                                  "state": {
+                                    "type": "string"
+                                  }
+                                }
+                              }
+                            }
+                          },
+                          "car": {
+                            "type": "object",
+                            "properties": {
+                              "id": {
+                                "type": "uuid"
+                              },
+                              "manufacturer": {
+                                "type": "string"
+                              },
+                              "brand": {
+                                "type": "string"
+                              },
+                              "model": {
+                                "type": "string"
+                              },
+                              "year_manufacture": {
+                                "type": "string"
+                              },
+                              "year_model": {
+                                "type": "string"
+                              },
+                              "fuel": {
+                                "type": "string"
+                              },
+                              "gearbox_type": {
+                                "type": "string"
+                              },
+                              "km": {
+                                "type": "string"
+                              },
+                              "color": {
+                                "type": "string"
+                              },
+                              "vehicleItem": {
+                                "type": "object",
+                                "properties": {
+                                  "id": {
+                                    "type": "uuid"
+                                  },
+                                  "airbag": {
+                                    "type": "boolean"
+                                  },
+                                  "alarm": {
+                                    "type": "boolean"
+                                  },
+                                  "air_conditioning": {
+                                    "type": "boolean"
+                                  },
+                                  "eletric_lock": {
+                                    "type": "boolean"
+                                  },
+                                  "eletric_window": {
+                                    "type": "boolean"
+                                  },
+                                  "stereo": {
+                                    "type": "boolean"
+                                  },
+                                  "reverse_sensor": {
+                                    "type": "boolean"
+                                  },
+                                  "reverse_camera": {
+                                    "type": "boolean"
+                                  },
+                                  "armoured": {
+                                    "type": "boolean"
+                                  },
+                                  "hydraulic_steering": {
+                                    "type": "boolean"
+                                  }
+                                }
+                              },
+                              "carImages": [
+                                {
+                                  "id": {
+                                    "type": "uuid"
+                                  },
+                                  "image": {
+                                    "type": "string"
+                                  },
+                                  "car_id": {
+                                    "type": "uuid"
+                                  },
+                                  "image_url": {
+                                    "type": "string"
+                                  }
+                                }
+                              ]
+                            }
+                          }
+                        }
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "JWT token is missing / Invalid JWT token"
+          },
+          "404": {
+            "description": "Ad entity were not found / Car entity were not found"
+          }
+        }
+      }
+    },
+
+    "/ads/{adsId}/car/{carId}/car-image": {
+      "patch": {
+        "tags": ["Cars Images"],
+        "summary": "Adição de uma foto do carro ao anúncio",
+        "description": "Essa rota permite a adição de uma nova foto do carro ao anúncio",
+        "security": [
+          { "bearerAuth": [] }
+        ],
+        "parameters": [
+          {
+            "name": "adsId",
+            "in": "path",
+            "description": "ID do anúncio",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "carId",
+            "in": "path",
+            "description": "ID do carro que deseja adicionar uma foto",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "image": {
+                    "type": "array",
+                    "items": {
+                      "type": "string",
+                      "format": "binary"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "401": {
+            "description": "JWT token is missing / Invalid JWT token"
+          },
+          "404": {
+            "description": "User not found / Car not found"
           }
         }
       }
